# app-source

./: .bandit  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  .secrets.baseline  .yamllint.yaml  Dockerfile  Dockerfile.base  Dockerfile.multistage  Dockerfile.optimize  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  run.sh  setup.sh  sonar-project.properties  test.sh
.github/templates/: ci.devops.yml  ci.devsecops.optimize.yml  ci.devsecops.yml  ci.yml  cleanup.yml
.github/workflows/: cd.yml  ci.yml  cleanup.yml
deployments/helm/python-app/: Chart.yaml  values.schema.json  values.yaml
deployments/helm/python-app/templates/: deployment.yaml
dockerfiles/: Dockerfile.large  Dockerfile.optimize
docs/: 0_devsecop-tools.md  1_pre-commit-tools.md  2_1_0_secrets_management_setup_guide.md  2_1_1_Git-crypt.md  2_secrets_management.md
init-scripts/postgres/: 01-init.sql
nginx/conf.d/: app.conf
reports/: bandit.json  bandit.sarif  safety-report.txt  test.json
scripts/: bandit_to_sarif.py  get_all_code.py  python_code_collection.md  ssh-setup-guide.md
scripts/performance/: artillery-load.yml
src/: code-generated.py
src/app/: config.py  dependencies.py  main.py  middleware.py  models.py
src/app/api/: health.py  views.py
src/app/db/: session.py
src/app/migrations/: create_items_table.sql
src/app/static/: index.html
src/app/static/components/: itemManager.jsx
src/app/static/js/: ItemsManager.jsx
src/app/templates/: index.html
src/monitoring/: prometheus.yml
src/monitoring/grafana-dashboards/: app-metrics.json
src/monitoring/grafana-provisioning/datasources/: datasource.yml
src/tests/: check_forbidden_words.py  conftest.py
src/tests/e2e/: test_workflow.py
src/tests/integration/: test_api.py  test_database.py  test_redis.py
src/tests/unit/: conftest.py  test_health.py
