[tool.poetry]
name = "app"
version = "0.1.0"
description = "Python Application with Best Practices"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]  # Add this line

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
structlog = "^23.1.0"
prometheus-client = "^0.17.1"
opentelemetry-api = "^1.20.0"
opentelemetry-sdk = "^1.20.0"
opentelemetry-instrumentation-fastapi = "^0.41b0"
asyncpg = "^0.29.0"
redis = {extras = ["hiredis"], version = "^5.2.0"}
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
types-redis = "^4.6.0.20240106"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
black = "^23.10.1"
ruff = "^0.1.6"
mypy = "^1.7.0"
bandit = "^1.7.5"
httpx = "^0.25.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests"
]
addopts = """
    --verbose
    --strict-markers
    --cov=src/app
    --cov-report=html
    --cov-report=term-missing
    --no-cov-on-fail
"""

[tool.coverage.run]
source = ["src/app"]
omit = [
    "src/tests/*",
    "src/app/__pycache__/*",
    "src/app/monitoring/*",
    "src/app/*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "except ImportError:",
    "raise Exception"
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
# Ignored rules
ignore = [
    "W293",  # Ignore blank line contains whitespace
]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_optional = true

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

